# MedAID-ML

./: .gitignore  README.md  pyproject.toml
medaidml/evaluation/: eval.py
medaidml/fast_detect_gpt/: run_inference.py
src/medaidml/: __init__.py  utils.py
src/medaidml/baseline/: correlation_signal_analysis.ipynb  simple_clf.ipynb
src/medaidml/ensemble/: mayority_voting.ipynb
src/medaidml/explanations/: eval_token_attr.py  run_explanations.py  search_phrase.py
src/medaidml/fast_detect_gpt/: model.py
src/medaidml/huggingface/: train.py
