[project]
name = "medaidml"
version = "0.1.0"
description = "Experiments for MedAID-ML."
readme = "README.md"
authors = [
    { name = "Patrick Styll", email = "patrick.styll@tuwien.ac.at" }
]
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.6.0",
    "wandb",
    "torch",
    "numpy",
    "transformers",
    "scikit-learn",
    "datasets",
    "pandas",
    "tqdm",
    "nltk",
    "cmake==3.27",
    "sentencepiece",
    "captum",
    "einops"
]

[project.scripts]
medaidml = "medaidml:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"